fix: layout issues
- using rem instead of %
- removed viewport dependent sizing
- fixing inconsistencies
- fixed negative spacing
- does not overflow higher resolution screens

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -9,7 +9,7 @@
 }
 
 html {
-  font-size: 1rem
+  font-size: 100%;
 }
 
 @media screen and (min-width:768px) {
@@ -42,16 +42,23 @@ a::selection {
 }
 
 .hero-grid {
-  margin: 10% 5%
+  max-width: 1200px;
+  margin: 2rem auto;
+  padding: 0 1.5rem;
 }
 
 .hero-grid .logo {
-  font-size: 22vw;
+  font-size: 3rem;
   line-height: 1.2;
   font-family: trajan-sans-pro, serif;
   font-weight: 400;
-  margin-top: 1rem;
-  margin-bottom: 1rem
+  margin-bottom: 1rem;
+}
+
+@media screen and (min-width:768px) {
+    .hero-grid .logo {
+        font-size: 8rem;
+    }
 }
 
 .hero-grid .text-box {
@@ -109,7 +116,9 @@ a::selection {
   justify-content: center;
   align-content: flex-start;
   align-items: flex-start;
-  padding: 10% 5%
+  padding: 5rem 1.5rem;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 #client-work article header {
@@ -117,7 +126,7 @@ a::selection {
   flex-grow: 2;
   max-width: 1024px;
   min-width: 20rem;
-  padding: 1rem
+  padding: 2rem;
 }
 
 @media screen and (min-width:1024px) {
@@ -164,14 +173,17 @@ a::selection {
 }
 
 #portfolio {
-  margin: 10% 5%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
-  grid-gap: 1rem
+  grid-gap: 1rem;
+  max-width: 1200px;
+  margin: 3rem auto;
+  padding: 0 1rem;
 }
 
 #portfolio h2 {
-  font-size: 8vw;
+  font-size: 6rem;
+  margin-top: 0;
   line-height: 1
 }
 
@@ -197,7 +209,7 @@ body>footer address {
   font-weight: 600;
   font-style: normal;
   color: #000;
-  padding: 0 5%;
+  padding: 0.2rem 1rem;
   margin: 0;
   line-height: 1.2;
   font-size: small
